full-moon/tests/cases/fail/parser/numeric-for-5/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/numeric-for-5
---
error[ast]: unexpected token `for`. for (expected name after `for`)
  ┌─ source.lua:1:1
  │
1 │ for local = 1, 10 do end
  │ ^^^

error[ast]: unexpected token `=`. = (expected either a variable name or `function`)
  ┌─ source.lua:1:11
  │
1 │ for local = 1, 10 do end
  │           ^

error[ast]: unexpected token `=`. = (unexpected token, this needs to be a statement)
  ┌─ source.lua:1:11
  │
1 │ for local = 1, 10 do end
  │           ^


